Kopje toegevoegd CCSi Connections

--- a/CCSi/Homepag_CONNECTIONS.html
+++ b/CCSi/Homepag_CONNECTIONS.html
@@ -33,6 +33,10 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You can view your weekly schedule via rooster.uva.nl. if you have downloaded or printed this information, please be aware that times, dates and locations may be subject to change and you should regularly check your online timetable.</em></span>
         </a>
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #124240; " href="https://amsuni.sharepoint.com/:x:/s/FMG_SW_FMG___SW___Cssci/EcVg6FB0hOFEuy_Nsp2bzQsBCXlpgfreikMCTVWyTParEA">
+            <h5><span style="font-size: 14pt; color: #1e1e1e;">Office Hours Core Lecturers</span></h5>
+            <span style="font-size: 10pt; color: #124240;"><em>In need of support or additional feedback from your Core Lecturer(s)? Please check where and when they will be hosting office hours.</em></span>
+        </a>
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #124240; " href="https://amsuni.sharepoint.com/:x:/s/FMG_SW_FMG___SW___Cssci/EfseFIKQ7UZBodQ27QozN5oBnsCs7VqDZwwH-71Qm2EkBA?e=GbEkhc&CID=75121BC6-4260-437C-9075-AB39B0608591">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">TA Support Hours</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>In need of support from your Learning Team or Digital Expertise TAs? Please check where and when you can find them!</em></span>
