locatie linkje erbij en tekst donkerder

--- a/Homepage/contact.html
+++ b/Homepage/contact.html
@@ -32,7 +32,7 @@
         <div class="content-box border border-trbl border-round" style="border-color:#cecece; background-color: #ffffff; padding:10px; margin:5px">
         <img style="width: 30%; padding:10px;" src="https://canvas.uva.nl/courses/8175/files/9860963/preview" alt="office.png" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/9860963" data-api-returntype="File" />
         <h4><b>Visit us</b></h4>
-        <p style="text-decoration: none; color:#FFDE59; font-size: 11pt;line-height: 1em;">REC B7.08<br><br><br><br><br><br><br></p>
+        <p style="text-decoration: none; font-size: 11pt;line-height: 1em;"><a href="https://uva.mapiq.net/rec-bcd#/places&select=c1e3ba2b-05ee-436d-bf37-71d9f3ec1071" target="_blank" style="text-decoration: none; color:#e0ba21; ">REC B7.08</a><br><br><br><br><br><br><br></p>
         <hr>
         <p style="font-size: 11pt;">Feel free to drop by our office! Usually there is someone available at REC B7.08 from Mondays to Thursdays.</p>
     </td>
