kleine wijziging in het verhaaltje over inzages en het antwoordmodel tonen

--- a/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/6_Inspection_22-23.html
@@ -148,7 +148,7 @@
         <div class="content-box">
             <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
                 <p>The option for students to see the answer model for open questions is disabled by default. Please <a href="mailto:icto-csw@uva.nl?subject=Inspection settings&body=- Exam name%3A%0D%0A- Start time inspection%3A%0D%0A- End time inspection%3A%0D%0A- Can students place comments in TestVision%3A no (default) / yes%0D%0A- Answer model open questions visible for students%3A no (default) / yes%0D%0APlease attach your answer model if you want it to be visible for students during the inspection!">mail ICTO</a> if you'd like to make use of this option. 
-                <p>When enabled, students will see the text you entered as criteria (see screenshot below) for each open question in TestVision, <u>but only if you've entered the criteria prior to the examination date</u>. If you have not entered the criteria prior to the exam (or they have changed since), please send ICTO a copy of your answer model and we will make sure the answer model is up to date for the inspection.
+                <p>When enabled, students will see the text you entered as criteria (see screenshot below) for each open question in TestVision, <u>but only if you've entered the criteria prior to the examination date</u>. If you have not entered the criteria prior to the exam (or they have changed since), your new answer model will not be visible during the inspection.
                     <br><br><img src="/courses/8175/files/8614278/preview" alt="criteria" /></p>
             </div>
         </div>
