--- a/Nieuwsbrief/23-24-ed2.html
+++ b/Nieuwsbrief/23-24-ed2.html
@@ -190,7 +190,7 @@
                 <!-- Banner -->     <img style="width:100%; border-radius: 4pt;" src="https://canvas.uva.nl/courses/8175/files/9965580/preview" alt="ans_banner.png">
                 <!-- Header -->     <h3 style="padding-left:7pt"><strong>Stay up to date with Ans developments</strong></h3>
                 <!-- Inhoud -->     <p style="font-size: 11pt; padding-left:7pt; padding-right:7pt">
-                                        [inhoud Maaike volgt nog]                                    
+                                    As announced in our previous newsletter, the UvA will permanently switch to the new assessment system Ans Exam next September. We have since become more familiar with the platform and are very excited. We think the new system is much more modern and intuitive than TestVision, and we expect lecturers to be delighted with the convenient functionalities. Next semester, we will run a few pilot tests. Would you like to participate? Then email <a href="">icto-csw@uva.nl</a> and we'll contact you. Also check out <a href="https://canvas.uva.nl/courses/8175/pages/ans-exam" target="blank">this page</a> with an overview of some great new functionalities!                                    
                                     </p>
 
                 <!-- Keywords --> 
@@ -208,8 +208,7 @@
                 <!-- Banner -->     <img style="width:100%; border-radius: 4pt;" src="https://canvas.uva.nl/courses/8175/files/9965500/preview" alt="discussions_banner.png"></div>
                 <!-- Header -->     <h3 style="padding-left:7pt"><strong>Counting discussion responses</strong></h3>
                 <!-- Inhoud -->     <p style="font-size: 11pt; padding-left:7pt; padding-right:7pt">
-                                        [inhoud Robyn volgt nog]                                    
-                                    </p>
+                    The ICTO team has developed a new script with Python that allows us to read data from Canvas Discussions to create a handy overview for teachers. Do you use many discussions to track student participation, but still lose track due to the large volume of submissions? Then email <a href="">icto-csw@uva.nl</a> and we'll run the data so you receive a nice Excel with the amount of (counting) discussion topics and responses per student. We have already been able to make a teacher very happy with this script and hear that it saves a lot of time!</p>
 
                 <!-- Keywords --> 
                 <ul class="pill" style="background: #FFFFFF; border-color:#FFFFFF; margin-top: 10px; margin-right: 7px; margin-bottom: 7px; float:right; "><li><span style="color: #000000;font-size:7pt;"><strong>discussions</strong></span></li></ul>
