structures pagina nieuw en building blocks gegevens aangepast

--- a/CCSi/Homepage_BUILDINGBLOCKS.html
+++ b/CCSi/Homepage_BUILDINGBLOCKS.html
@@ -25,11 +25,11 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Semester 2</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Welcome to the new semester!</em></span>
         </a>-->
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="https://eur04.safelinks.protection.outlook.com/ap/b-59584e83/?url=https%3A%2F%2Famsuni-my.sharepoint.com%2F%3Ab%3A%2Fg%2Fpersonal%2Ft_blomvliet_uva_nl%2FESH44nGjN19IgQhzB27qfRABc8HUvIipkJ7fSkYQxjNqPg%3Fe%3DgWKOIB&data=05%7C01%7Cicto-csw%40uva.nl%7Cae3de6265ce4480238b008db55d90a42%7Ca0f1cacd618c4403b94576fb3d6874e5%7C0%7C0%7C638198162880101025%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=RMflxvWMVs6xkSpF3rv%2BQVwvJ%2FGyff3IAnVIfkmJrGo%3D&reserved=0">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Course Manual Semester 2 Building Blocks 2023-2024</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="https://eur04.safelinks.protection.outlook.com/ap/b-59584e83/?url=https%3A%2F%2Famsuni-my.sharepoint.com%2F%3Ab%3A%2Fg%2Fpersonal%2Ft_blomvliet_uva_nl%2FEbY0QhyYM39BmBCnMeV9U_MBPC8jSbxwTDo7Ge4ngKelpg%3Fe%3DlXQpdL&data=05%7C01%7Cicto-csw%40uva.nl%7Cae3de6265ce4480238b008db55d90a42%7Ca0f1cacd618c4403b94576fb3d6874e5%7C0%7C0%7C638198162880101025%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&sdata=dGqooSn7OjCv6q3baeuUaM1hUKYEEuvMstaJBr26sdw%3D&reserved=0">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Assignment deadlines</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Check out this document for an overview of all deadlines</em></span>
         </a>
