--- a/A-Z/Exams/ANS/Ans_Exam.html
+++ b/A-Z/Exams/ANS/Ans_Exam.html
@@ -27,7 +27,9 @@
 
                 <br><br>Met Ans Exam haalt de UvA een innovatieve partner in huis voor de lange termijn met een contract van minimaal 6 jaar met een uitloopmogelijkheid tot maximaal 15 jaar. Deze lange looptijd is de basis voor een stabiele dienstverlening en samenwerking. ANS Exam heeft veel ervaring in het hoger onderwijs met digitaal toetsen. De continue ontwikkeling en innovatie van Ans Exam zal mede op basis van de specifieke wensen van de UvA worden ingevuld.
 
-                <br><br>Het huidige toetssysteem TestVision blijft minimaal nog tot en met augustus 2024 beschikbaar, zodat docenten en beheerders dit nog kunnen gebruiken tijdens de overgangsfase naar Ans Exam. Bekijk hier de <a href= "https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/new-online-testing-software/new-online-testing-software.html" target="blank">veelgestelde vragen</a> over de overgang van TestVision naar Ans.
+                <br><br>Het huidige toetssysteem TestVision blijft minimaal nog tot en met augustus 2024 beschikbaar, zodat docenten en beheerders dit nog kunnen gebruiken tijdens de overgangsfase naar Ans Exam. 
+                
+                <br><br>Bekijk hier de <a href= "https://medewerker.uva.nl/en/executive-staff-and-central-service-units/shared-content-secured/medewerkersites/uva-medewerkers/en/az/new-online-testing-software/new-online-testing-software.html" target="blank">veelgestelde vragen</a> over de overgang van TestVision naar Ans.
             </p>
 
             </td>
@@ -43,19 +45,19 @@
 
             <!-- Inhoud -->     
             <p style="font-size: 12pt; padding: 10px;">
-                Ans Exam biedt frisse en nieuwe functionaleiten. Wij zijn erg te spreken over het intuïnitieve design en denken dat docenten beter overweg kunnen met functionaliteiten die te maken hebben met het bouwen of nakijken van een toets. Hier een opsomming:
+                Ans Exam biedt mooie functionaliteiten. We zijn enthousiast over het intuïtieve ontwerp en zijn ervan overtuigd dat docenten nu beter gebruik kunnen maken van de tools voor het samenstellen en beoordelen van toetsen. Hier volgt een overzicht:
             </p>
 
             <!-- 0) Werk met een nieuw & vriendelijk design --> 
             <span class="element_toggler" aria-controls="QS0" aria- label="Toggler toggle list visibility" aria-expanded="false">
-                <a><span style="float:left; padding-bottom:0px"><i class="icon-mini-arrow-end" style="color:black"></i>&nbsp;&nbsp; Werk met een nieuw & vriendelijk design</span><span style="float:right; padding-bottom:0px"><i class="icon-arrow-open-down"></i></span></a>
+                <a><span style="float:left; padding-bottom:0px"><i class="icon-mini-arrow-end" style="color:black"></i>&nbsp;&nbsp; Bouw de toets in een vriendelijk design</span><span style="float:right; padding-bottom:0px"><i class="icon-arrow-open-down"></i></span></a>
             </span>
             <br><hr style="padding:0px; margin:0px"></hr>
             <!-- Inhoud-->
             <div id="QS0" style="display: none;">
                 <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top:10px">
                     <p style="font-size:11pt">
-                        Ans is een innovatief systeem en heeft een moderne uitstraling. In tegenstelling tot TestVision, kun je nu de toets in één omgeving bouwen (d.w.z. dat alle vraag- en toetsinstellingen binnen hetzelfde menu te vinden zijn). Wil je vragen bewaren of hergebruiken voor bijvoorbeeld formatieve toetsen? Maak dan gebruik van een intelligente item bank. <a href="https://support.ans.app/hc/en-us/categories/360003182437-Instructions-for-employees" target="blank">Deze webpagina</a> beschrijft alle instellingen die er zijn.
+                        Ans is een innovatief systeem en heeft een moderne uitstraling. In tegenstelling tot TestVision is het nu mogelijk om de toets in één omgeving bouwen, d.w.z. dat alle vraag- en toetsinstellingen binnen hetzelfde menu te vinden zijn. Wil je vragen bewaren of hergebruiken voor bijvoorbeeld formatieve toetsen? Maak dan gebruik van een itembank. <a href="https://support.ans.app/hc/en-us/categories/360003182437-Instructions-for-employees" target="blank">Deze webpagina</a> beschrijft alle instellingen die er zijn.
                     </p>
                 </blockquote>
             </div>
@@ -70,7 +72,7 @@
             <div id="QS1" style="display: none;">
                 <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top:10px">
                     <p style="font-size:11pt">
-                        We horen dat docenten erg blij zijn met de nakijk-functionaliteiten van Ans. Je kunt stukken tekst nu handig <a href="https://support.ans.app/hc/en-us/articles/360033652094-Start-reviewing" target="blank">annoteren</a> of gebruik maken van <a href="https://support.ans.app/hc/en-us/articles/360033097274-Use-quick-comments" target="blank">quick comments</a>. Nakijken is hierdoor veel gemakkelijker geworden en is meer gaan lijken op het beoordelen met Canvas SpeedGrader.
+                        We horen dat docenten erg blij zijn met de nakijk functionaliteiten van Ans. Je kunt nu tekst tijdens het beoordelen handig <a href="https://support.ans.app/hc/en-us/articles/360033652094-Start-reviewing" target="blank">annoteren</a> of gebruik maken van <a href="https://support.ans.app/hc/en-us/articles/360033097274-Use-quick-comments" target="blank">quick comments</a>. Nakijken is hierdoor veel gemakkelijker geworden en is meer gaan lijken op het beoordelen met Canvas SpeedGrader.
                     </p>
                 </blockquote>
             </div>
@@ -115,7 +117,22 @@
             <div id="QS4" style="display: none;">
                 <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top:10px">
                     <p style="font-size:11pt">
-                        Eindelijk! Nooit meer mailen naar ICTO en wachten tot beoordelaars zijn toegevoegd, vanaf nu kun je dit heel gemakkelijk zelf doen. Het is daarnaast veel simpeler geworden om het nakijken te verdelen onder collega's of om het nakijken bijvoorbeeld te verdelen onder werkgroepen. Bekijk <a href="https://support.ans.app/hc/en-us/articles/360033652094-Start-reviewing" target="blank">deze pagina</a> voor meer informatie over de nakijkverdeling.
+                        Eindelijk! Nooit meer mailen naar ICTO en wachten tot beoordelaars zijn toegevoegd, vanaf nu kun je dit heel gemakkelijk zelf doen. Het is daarnaast veel simpeler geworden om het nakijken te verdelen onder collega's of om het nakijken te verdelen in werkgroepen. Bekijk <a href="https://support.ans.app/hc/en-us/articles/360033652094-Start-reviewing" target="blank">deze pagina</a> voor meer informatie het beoordelen.
+                    </p>
+                </blockquote>
+            </div>
+            <br>
+
+            <!-- 7) Gebruik een intelligente database --> 
+            <span class="element_toggler" aria-controls="QS7" aria- label="Toggler toggle list visibility" aria-expanded="false">
+                <a><span style="float:left; padding-bottom:0px"><i class="icon-mini-arrow-end" style="color:black"></i>&nbsp;&nbsp; Gebruik een intelligente vragen database</span><span style="float:right; padding-bottom:0px"><i class="icon-arrow-open-down"></i></span></a>
+            </span>
+            <br><hr style="padding:0px; margin:0px"></hr>
+            <!-- Inhoud-->
+            <div id="QS7" style="display: none;">
+                <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top:10px">
+                    <p style="font-size:11pt">
+                        De meest simpele methode in Ans is om vanuit een vaktoets direct de vragen aan te maken. Maar wil je vragen bewaren? Of hergebruiken? Sla dan de vragen op naar de itembank van het vak, en koppel tags of leerdoelen aan vragen zodat jij en je collega's een slimme database bouwen. Filter over de vragen database om formatieve of summatieve itembank toetsen in een handomdraai voor te bereiden en naar de vaktoets te importeren.
                     </p>
                 </blockquote>
             </div>
@@ -130,14 +147,26 @@
             <div id="QS5" style="display: none;">
                 <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top:10px">
                     <p style="font-size:11pt">
-                        De UvA is volop bezig met het automatiseren van processen, het afgelopen jaar zijn er daarom op de achtergrond grote inhaalslagen gemaakt in onze logistieke systemen. Met ingang van het nieuwe toetsysteem werken wij toe naar 1) het automatisch toevoegen van vakken en toetsen naar Ans uit onze bronsystemen, 2) het automatisch toevoegen van vakcoördinatoren aan toetsen, en 3) het automatisch invullen van toetsgegevens uit het rooster zoals de tijd, locatie, de deelnemers en extra tijd gegevens. Je kunt je voorstellen dat met deze vormen van automatisering de kans op fouten tijdens de afname heel erg zijn afgenomen! We zijn erg enthousiast over deze ontwikkelingen en hopen dat de ervaring voor studenten en docenten hierdoor verbeterd.
+                        Alle instellingen die in Ans een risico vormen voor de toetsafname worden binnen een duidelijk herkenbare 'gevaren zone' weergegeven. Het systeem plaatst de instellingen binnen een rode omlijning met een waarchuwing erbij, hierdoor weet je zeker welke instellingen veilig zijn om mee te expirimenteren en welke niet.  
                     </p>
                 </blockquote>
             </div>
             <br>
-            
 
-
+            <!-- 6) Toetsgegevens zijn geautomatiseerd --> 
+            <span class="element_toggler" aria-controls="QS6" aria- label="Toggler toggle list visibility" aria-expanded="false">
+                <a><span style="float:left; padding-bottom:0px"><i class="icon-mini-arrow-end" style="color:black"></i>&nbsp;&nbsp; Toetsgegevens worden geautomatiseerd</span><span style="float:right; padding-bottom:0px"><i class="icon-arrow-open-down"></i></span></a>
+            </span>
+            <br><hr style="padding:0px; margin:0px"></hr>
+            <!-- Inhoud-->
+            <div id="QS6" style="display: none;">
+                <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top:10px">
+                    <p style="font-size:11pt">
+                        We zetten voortdurend stappen om processen te automatiseren. In het afgelopen jaar hebben er ingrijpende veranderingen plaatsgevonden in de logistiek achter onze systemen. Met de introductie van het nieuwe toetsysteem is het nu mogelijk om vakken en toetsen automatisch vanuit de bronsystemen naar Ans te integreren. Daarnaast kunnen vakcoördinatoren direct aan toetsen worden gekoppeld, en worden toetsdetails zoals tijd, locatie, deelnemers en extra tijd automatisch aangevuld. Dit draagt aanzienlijk bij aan het verminderen van fouten tijdens de afname. We zijn blij met deze ontwikkelingen en hopen dat de ervaring voor zowel studenten als docenten hierdoor aanzienlijk verbeterd wordt.
+                    </p>
+                </blockquote>
+            </div>
+            <br>
 
         </tr>
     </table>
