twee modules toegevoegd cssci connections

--- a/CCSi/Homepag_CONNECTIONS.html
+++ b/CCSi/Homepag_CONNECTIONS.html
@@ -122,14 +122,14 @@
         <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="Week 18: January 15-19" href="/courses/39886/modules/340617?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 18:  January 15-19</span>
         </a>
-        <!-- 19
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="WWeek 19: January 22-26" href="">
+        <!-- 19 -->
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="WWeek 19: January 22-26" href="/courses/39886/modules/350749?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 19:  January 22-26</span>
-        </a>-->
-        <!-- 20 
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="Week 20: January 29 - February 2" href="/courses/39886/modules/340617?wrap=1">
+        </a>
+        <!-- 20 -->
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #124240; title="Week 20: January 29 - February 2" href="/courses/39886/modules/350750?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 20:  January 29 - February 2</span>
-        </a>-->
+        </a>
        
     </div>
 
