--- a/CCSi/Homepage_BUILDINGBLOCKS.html
+++ b/CCSi/Homepage_BUILDINGBLOCKS.html
@@ -29,7 +29,7 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Course Manual Semester 2 Building Blocks 2023-2024</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="https://canvas.uva.nl/courses/43698/assignments">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Assignment deadlines</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Check out this document for an overview of all deadlines</em></span>
         </a>
