--- a/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/3_Assessment_22-23.html
@@ -433,26 +433,22 @@
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p>&nbsp;</p>
                         <div class="alert alert-info"><a class="icon-info"></a><strong> Note:</strong> You can only analyse the results once they have been <a href="#FAQ_G2">validated</a>.</div>
                         <br />
-                        <p>&nbsp;</p>
-                        <p>&nbsp;</p>
                         <div class="alert"><a class="icon-warning"></a><strong> Warning:</strong> A reliable analysis requires at least 100 exam results.</div>
                         <br />
-                        <p>&nbsp;</p>
                     </td>
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">1.</span> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Tests</u> menu.</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Published</u> menu.</span></strong></td>
                 </tr>
                 <tr style="height: auto; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-analyse" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Tests menu</em></span> </span></p>
-                        <div id="tests-menu-analyse" style="display: none; color: #6096e6;">
-                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="https://canvas.uva.nl/courses/8175/files/8311811/preview" alt="tests_menu" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8311811" data-api-returntype="File" /></p>
+                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-mark-correct-2" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Published menu</em></span> </span></p>
+                        <div id="tests-menu-mark-correct-2" style="display: none; color: #6096e6;">
+                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/10201316/preview" alt="Scherm&shy;afbeelding 2024-01-18 om 16.41.04.png" />></p>
                         </div>
                     </td>
                 </tr>
@@ -569,22 +565,20 @@
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p>&nbsp;</p>
                         <div class="alert alert-info"><a class="icon-info"></a><strong> Note:</strong> You can only mark questions as correct once the exam has been <a href="#FAQ_G2">validated</a>.</div>
                         <br />
-                        <p>&nbsp;</p>
                     </td>
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">1.</span> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Tests</u> menu.</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Published</u> menu.</span> </strong></td>
                 </tr>
                 <tr style="height: auto; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-mark-correct" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Tests menu</em></span> </span></p>
+                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-mark-correct" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Published menu</em></span> </span></p>
                         <div id="tests-menu-mark-correct" style="display: none; color: #6096e6;">
-                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="https://canvas.uva.nl/courses/8175/files/8311811/preview" alt="tests_menu" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8311811" data-api-returntype="File" /></p>
+                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/10201316/preview" alt="Scherm&shy;afbeelding 2024-01-18 om 16.41.04.png" />></p>
                         </div>
                     </td>
                 </tr>
@@ -687,22 +681,20 @@
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p>&nbsp;</p>
                         <div class="alert alert-info"><a class="icon-info"></a><strong> Note:</strong> You can only modify the answer key once the exam has been <a href="#FAQ_G2">validated</a>.</div>
                         <br />
-                        <p>&nbsp;</p>
                     </td>
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">1.</span> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Tests</u> menu.</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Published</u> menu.</span> </strong></td>
                 </tr>
                 <tr style="height: auto; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-mark-partial" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Tests menu</em></span> </span></p>
-                        <div id="tests-menu-mark-partial" style="display: none; color: #6096e6;">
-                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="https://canvas.uva.nl/courses/8175/files/8311811/preview" alt="tests_menu" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8311811" data-api-returntype="File" /></p>
+                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-mark-correct-3" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Published menu</em></span> </span></p>
+                        <div id="tests-menu-mark-correct-3" style="display: none; color: #6096e6;">
+                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/10201316/preview" alt="Scherm&shy;afbeelding 2024-01-18 om 16.41.04.png" />></p>
                         </div>
                     </td>
                 </tr>
@@ -995,22 +987,20 @@
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p>&nbsp;</p>
                         <div class="alert alert-info"><a class="icon-info"></a><strong> Note:</strong> You can only disable the chance score retroactively once the exam has been <a href="#FAQ_G2">validated</a>.</div>
                         <br />
-                        <p>&nbsp;</p>
                     </td>
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">1.</span> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Tests</u> menu.</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Published</u> menu.</span> </strong></td>
                 </tr>
                 <tr style="height: auto; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-chance-score" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Tests menu</em></span> </span></p>
-                        <div id="tests-menu-chance-score" style="display: none; color: #6096e6;">
-                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="https://canvas.uva.nl/courses/8175/files/8311811/preview" alt="tests_menu" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8311811" data-api-returntype="File" /></p>
+                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-mark-correct-4" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Published menu</em></span> </span></p>
+                        <div id="tests-menu-mark-correct-4" style="display: none; color: #6096e6;">
+                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/10201316/preview" alt="Scherm&shy;afbeelding 2024-01-18 om 16.41.04.png" />></p>
                         </div>
                     </td>
                 </tr>
@@ -1121,22 +1111,20 @@
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p>&nbsp;</p>
                         <div class="alert alert-info"><a class="icon-info"></a><strong> Note:</strong> You can only change the grade calculation once the exam has been <a href="#FAQ_G2">validated</a>.</div>
                         <br />
-                        <p>&nbsp;</p>
                     </td>
                 </tr>
                 <tr style="height: auto;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">1.</span> </strong></td>
-                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Tests</u> menu.</span> </strong></td>
+                    <td style="width: 90%; border-style: hidden; height: auto;"><strong> <span style="font-size: 13pt;">Go to the <u>Published</u> menu.</span> </strong></td>
                 </tr>
                 <tr style="height: auto; padding-bottom: 8px;">
                     <td style="width: 7%; border-style: hidden; height: auto; text-align: center;"><strong> <span style="font-size: 13pt;">&nbsp;</span> </strong></td>
                     <td style="width: 90%; border-style: hidden; height: auto;">
-                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-grade-calc" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Tests menu</em></span> </span></p>
-                        <div id="tests-menu-grade-calc" style="display: none; color: #6096e6;">
-                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="https://canvas.uva.nl/courses/8175/files/8311811/preview" alt="tests_menu" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8311811" data-api-returntype="File" /></p>
+                        <p><span class="element_toggler" role="button" aria-controls="tests-menu-mark-correct-5" aria-expanded="False"> <span style="color: #6096e6;"><em> <a class="icon-zoom-in"></a>Published menu</em></span> </span></p>
+                        <div id="tests-menu-mark-correct-5" style="display: none; color: #6096e6;">
+                            <p style="margin-bottom: 0in; color: #6096e6; line-height: 100%;" lang="nl-NL"><img src="/courses/8175/files/10201316/preview" alt="Scherm&shy;afbeelding 2024-01-18 om 16.41.04.png" />></p>
                         </div>
                     </td>
                 </tr>
