--- a/ICTO-SW/CCSi/Homepage_STRUCTURES.html
+++ b/ICTO-SW/CCSi/Homepage_STRUCTURES.html
@@ -1,4 +1,4 @@
-<p><img role="presentation" src="/courses/43688/files/10122257/preview" alt="" /></p>
+<p><img role="presentation" src="/courses/43688/files/10299313/preview" alt="STRUCTURES.jpg" /></p>
 
 <!-- Tab vakjes (aanklikbare menu) -->
 <h3 style="margin: 5px; margin-bottom: 15px; color: #1e1e1e;"><b>STRUCTURES: Applying responsible AI to reduce inequality</b></h3>
@@ -25,13 +25,13 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Semester 2</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Welcome to the new semester!</em></span>
         </a>-->
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="https://canvas.uva.nl/api/v1/courses/43688/modules/374409">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Course Manual Semester 2 Structures 2023-2024</em></span>
         </a>
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="https://canvas.uva.nl/courses/43688/assignments">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Assignment deadlines</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Check out this document for an overview of all deadlines</em></span>
+            <span style="font-size: 10pt; color: #124240;"><em>Check out this overview of all deadlines</em></span>
         </a>
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="https://rooster.uva.nl/schedule">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
