--- a/ICTO-SW/CCSi/Homepage_BUILDINGBLOCKS.html
+++ b/ICTO-SW/CCSi/Homepage_BUILDINGBLOCKS.html
@@ -25,7 +25,7 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Semester 2</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Welcome to the new semester!</em></span>
         </a>-->
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #8fa674; title="" href="https://canvas.uva.nl/api/v1/courses/43698/modules/371982">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Course Manual Semester 2 Building Blocks 2023-2024</em></span>
         </a>
