--- a/EdTech4Teachers/checklist.html
+++ b/EdTech4Teachers/checklist.html
@@ -568,7 +568,7 @@
                                     With Ans Exam, the UvA brings in an innovative partner for the long term, with a contract of at least 6 years, extendable up to a maximum of 15 years. This long duration forms the basis for stable service and collaboration. ANS Exam has extensive experience in higher education with digital examinations. The continuous development and innovation of Ans Exam will also be shaped based on the specific wishes of the UvA.
                                     <br><br>
                                     <b>About the new functionalities</b><br>
-                                    Ans Exam offers fresh and new functionalities. We are excited and believe that teachers will be better able to handle functionalities related to constructing and reviewing an exam. <b><a href="https://canvas.uva.nl/courses/8175/pages/ans-exam-english  target="_blank" rel="noopener"" >Here is a summary about the new functionalities</a> <i><a href="https://canvas.uva.nl/enroll/N3HMY8">(#enroll here first)</a></i></b></b>. 
+                                    Ans Exam offers fresh and new functionalities. We are excited and believe that teachers will be better able to handle functionalities related to constructing and reviewing an exam. <b><a href="https://canvas.uva.nl/courses/8175/pages/ans-exam-english" target="blank" rel="noopener"" >Here is a summary about the new functionalities</a> <i><a href="https://canvas.uva.nl/enroll/N3HMY8">(#enroll here first)</a></i></b></b>. 
                                 </p>
                             </blockquote>
 
