--- a/EdTech4Teachers/checklist.html
+++ b/EdTech4Teachers/checklist.html
@@ -12,9 +12,7 @@
 <!-- Introductietekst + afbeelding -->
 <blockquote style="color:black">
     <p style="font-size: 13pt; margin-top: 30px; margin-bottom: 30px;">
-        Welcome to our newsletter! In this edition, you will find a concise checklist of essential tips to get your course going for the second semester. Go through these points and be sure to start the semester without any worries.
-
-        <br><br>-- We apologise for the late release of this edition, the past few weeks have been very busy.
+        Welcome to our newsletter! In this edition, you will find a concise checklist of essential tips to get your course going for the second semester. Go through these points and be sure to start the semester without any worries. We apologise for the late release of this edition, the past few weeks have been very busy.
     </p>
 </blockquote>
 
