--- a/ICTO-SW/Nieuwsbrief/23-24-ed3_3.html
+++ b/ICTO-SW/Nieuwsbrief/23-24-ed3_3.html
@@ -385,7 +385,7 @@
                                         <br><br>
                                         <b>Technical issues</b><br>
                                         With the switch to Panopto, you may have encountered some initial challenges. Technical issues arose during the first week, but they have since been resolved. Unfortunately, there are also some limitations with Panopto, as it is currently not available through the rich content editor in Canvas, unlike Mediasite. This means that teachers can't easily access lectures and embed them as they could before. The web lecture service is working to address this issue, but it is uncertain when this option will be reinstated in the future.
-                                        <br>Moreover, in the lecture halls, the message "recording" is currently not displayed on the touch panel as soon as a recording starts. Upon successful recording, the message "not recording" remains on screen. We are working hard to find a solution. Recording lectures still works the same as with Mediasite. Always contact the web lecture service when in doubt about a started recording (020-5252800).
+                                        <br>Moreover, in the lecture halls, the message "recording" is currently not displayed on the touch panel as soon as a recording starts. Upon successful recording, the message "not recording" remains on screen. The web lecture service is working hard to find a solution. Recording lectures still works the same as with Mediasite. Always contact the web lecture service when in doubt about a started recording (020-5252800).
                                     </p>
                                 </blockquote>
 
