--- a/EdTech4Teachers/checklist.html
+++ b/EdTech4Teachers/checklist.html
@@ -151,7 +151,7 @@
 
                                 <blockquote style="padding-top: 1px; padding-bottom: 5px; margin-top: 10px;margin-left:58px;color:black">
                                     <p style="font-size: 13pt;">
-                                        The UvA participates in the national Easy Access buyout scheme (2023-2025). This allows you to use or reuse copyrighted material for educational purposes. This applies when you – for example – include magazine articles, book chapters or images in a reader, a presentation, Canvas or Teams. 
+                                        The UvA participates in the national Easy Access buyout scheme (2023-2025). This allows you to use or reuse copyrighted material for educational purposes. This applies when you – for example – include magazine articles, book chapters, images in a reader or a presentation to students in Canvas or Teams. 
                                         <br><br>&rarr;&nbsp;<b><a href="https://uba.uva.nl/en/support/copyright/lecturers/copyright-checker.html" target="_blank">You can read all about the conditions your teaching materials must meet here</a></b>
                                     </p>
                                 </blockquote>
