aanpassingen voor kim op homepages

--- a/ICTO-SW/CCSi/Homepage_STRUCTURES.html
+++ b/ICTO-SW/CCSi/Homepage_STRUCTURES.html
@@ -25,9 +25,9 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Semester 2</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>Welcome to the new semester!</em></span>
         </a>-->
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="https://canvas.uva.nl/api/v1/courses/43688/modules/374409">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="https://canvas.uva.nl/courses/43688/files/10343975?module_item_id=1970985">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Course Manual Semester 2 Structures 2023-2024</em></span>
+            <span style="font-size: 10pt; color: #124240;"><em>Semester 4</em></span>
         </a>
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5; title="" href="https://canvas.uva.nl/courses/43688/assignments">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Assignment deadlines</span></h5>
