klein foutje laatkomers gecorrigeerd tvo

--- a/ICTO-SW/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
+++ b/ICTO-SW/A-Z/Exams/TestVision/22-23/5_FAQ-students_22-23.html
@@ -30,7 +30,7 @@
     <li>
         <div class="content-box">
             <div style="background-color: #ffffff; padding-left: 30px; border-left: 5px solid #e1e9f4;">
-                <p>If you are less than 30 minutes late, you can still start the exam. If you arrive late by 30 minutes or more, you are no longer allowed to enter the examination room and have automatically failed the exam. This means you will have less time to complete the exam.</p>
+                <p>If you are less than 30 minutes late, you can still start the exam, but you might not receive full time anymore depending on the teacher's decision. If you arrive late by 30 minutes or more, you are no longer allowed to enter the examination room and have automatically failed the exam.</p>
             </div>
         </div>
     </li>
