--- a/ICTO-SW/Redesign/Homepage.html
+++ b/ICTO-SW/Redesign/Homepage.html
@@ -1,8 +1,14 @@
 <style>
 
+
+    .page-title { display:none !important}
+    #right-side-wrapper {display:none !important}
+
     * { 
         font-family: Arial, Helvetica, sans-serif; 
         }
+
+
 
     ul.menubar {
         list-style-type: none;
@@ -11,8 +17,7 @@
         overflow: hidden;
         background-color: #104352;
         width:100%;
-        position:fixed;
-        top:0;
+
         }
 
     li.menubar {
@@ -210,6 +215,9 @@
 <body>
 
 <a id="top"></a> 
+
+
+
 
 <!-- Banner -->
 <img style="width: 100%;" src="https://canvas.uva.nl/courses/8175/files/10453380/preview" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/10453380" data-api-returntype="File" />
