--- a/ICTO-SW/CCSi/Homepage_STRUCTURES.html
+++ b/ICTO-SW/CCSi/Homepage_STRUCTURES.html
@@ -37,11 +37,11 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You can view your weekly schedule via rooster.uva.nl. if you have downloaded or printed this information, please be aware that times, dates and locations may be subject to change and you should regularly check your online timetable.</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5;" title="" href="https://amsuni.sharepoint.com/:x:/s/FMG_SW_FMG___SW___Cssci/EdPTVgR7MNlNqLLbJI6iDoEB8kHW8xzuCAmvwtT7ftZj3Q">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5;" title="" href="https://amsuni.sharepoint.com/:x:/s/FMG_SW_FMG___SW___Cssci/EdPTVgR7MNlNqLLbJI6iDoEBYA4yjtfDg9fcwm7YbyPENQ">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">TA Support Hours</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>In need of support from you Learning Team TA of Digital Expertise TA? Please check where and when you can find them!</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5;" title="" href="https://amsuni.sharepoint.com/:x:/s/FMG_SW_FMG___SW___Cssci/Eb8nMBl8prJMnwFBWmBcH3oBiwEifSrD8jgSDU7ghcyyPg">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #74a5c5;" title="" href="https://amsuni.sharepoint.com/:x:/s/FMG_SW_FMG___SW___Cssci/Eb8nMBl8prJMnwFBWmBcH3oBH1iLTEDFZ_dwZ5OrIE8vkQ?">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">CL Office Hours</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em></em></span>
         </a>
